Added awagger and change folder name
